<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_note_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NoteDisplayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/note_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_just_bottom_bg"
        android:backgroundTint="@color/light_grey"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:clickable="true"
        android:minHeight="200dp"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/camera_button"
            style="@style/ToolbarActionButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="3dp"
            android:contentDescription="@string/add_header_photo"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_icon" />

        <ImageButton
            android:id="@+id/back_button"
            style="@style/ToolbarActionButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/back_btn_description"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <ImageButton
            android:id="@+id/location_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:padding="3dp"
            android:background="@android:color/transparent"
            android:tint="@color/white"
            android:contentDescription="@string/location_btn_description"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/camera_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/location_icon" />

        <ImageButton
            android:id="@+id/audio_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:padding="3dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:tint="@color/white"
            android:contentDescription="@string/audio_btn_description"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/location_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/microphone_icon" />

        <TextView
            android:id="@+id/note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nunitosans_bold"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/note_date"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/note_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/note_date_placeholder"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/note_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/note_location"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <jp.wasabeef.richeditor.RichEditor
        android:id="@+id/notedisplay_text_editor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/editor_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_header">

    </jp.wasabeef.richeditor.RichEditor>

    <HorizontalScrollView
        android:id="@+id/editor_toolbar"
        style="@style/NoteEditorToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:forceHasOverlappingRendering="true"
            android:orientation="horizontal"
            android:overScrollMode="always">

            <ImageButton
                android:id="@+id/editor_action_bold_btn"
                style="@style/NoteEditorToolbar.Button"
                android:contentDescription="@string/bold"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:srcCompat="@drawable/bold_icon" />

            <ImageButton
                android:id="@+id/editor_action_italic_btn"
                style="@style/NoteEditorToolbar.Button"
                android:contentDescription="@string/italics"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:srcCompat="@drawable/italic_icon" />

            <ImageButton
                android:id="@+id/editor_action_underline_btn"
                style="@style/NoteEditorToolbar.Button"
                android:contentDescription="@string/underline"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:srcCompat="@drawable/underline_icon" />

            <ImageButton
                android:id="@+id/editor_action_strikethrough_btn"
                style="@style/NoteEditorToolbar.Button"
                android:contentDescription="@string/strikethrough"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:srcCompat="@drawable/strikethrough_icon" />

            <ImageButton
                android:id="@+id/editor_action_ul_btn"
                style="@style/NoteEditorToolbar.Button"
                android:contentDescription="@string/unordered_list"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:srcCompat="@drawable/unordered_list_icon" />

            <ImageButton
                android:id="@+id/editor_action_ol_btn"
                style="@style/NoteEditorToolbar.Button"
                android:contentDescription="@string/ordered_list"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:srcCompat="@drawable/ordered_list_icon" />

            <ImageButton
                android:id="@+id/editor_action_image_btn"
                style="@style/NoteEditorToolbar.Button"
                android:contentDescription="@string/insert_image"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:srcCompat="@drawable/photography_icon" />

            <ImageButton
                android:id="@+id/editor_action_drawing_btn"
                style="@style/NoteEditorToolbar.Button"
                android:contentDescription="@string/add_drawing"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                app:srcCompat="@drawable/pencil_icon" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>