    <resources>
    <!-- Main ressources -->
    <string name="app_name">Asteroid</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_todo_lists">Todos</string>
    <string name="menu_btn_description">Open menu</string>
    <string name="profile">Profile</string>
    <string name="credits">Credits</string>

    <string name="search_btn_description">Search</string>
    <string name="back_btn_description">Back</string>

    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="apply">Apply</string>
    <string name="erase">Erase</string>

    <!-- Profile Fragment -->
    <string name="profile_title">Profile</string>
    <string name="modify_password">Modify password</string>


        <!-- Task Management -->
    <string name="title_todo">My todo list</string>
    <string name="task_creation_placeholder">Do something great</string>
    <string name="task_edit_hint">Your task…</string>
    <string name="new_task">New task</string>
    <string name="bin_btn_description">Cleanup</string>

    <!-- To-do Management -->
    <string name="list_activity_title">My lists</string>
    <string name="new_list_btn_description">Add a new to-do</string>
    <string name="add_todo_suggestion">Enter the title of your to-do list</string>
    <string name="rename_todo_suggestion">Rename your to-do list</string>
    <string name="delete_todo_suggestion">Are you sure to delete this to-do?</string>

    <!-- Note Management -->
    <string name="note_activity_title">My notes</string>
    <string name="new_note_btn_description">Add a new note</string>
    <string name="add_note_suggestion">Enter the title of your note</string>
    <string name="delete_note_suggestion">Are you sure to delete this note?</string>
    <string name="rename_note_suggestion">Enter a new title for your Note:</string>
    <string name="add_header_photo">Photo</string>
    <string name="date_placeholder">xx/yy aa:bb</string>
    <string name="note_date_placeholder">Day, Nth Month YEAR</string>
    <string name="add_image_dialog">How do you want to add an image ?</string>
    <string-array name="add_image_types">
        <item>Pick a file</item>
        <item>Take a photo</item>
    </string-array>

    <!-- Drawing -->
    <string name="drawing_activity_title">Handwritten Note</string>

    <!-- Location -->
    <string name="default_location">Sydney</string>
    <string name="current_location_message">I\'m here</string>
    <string name="location_not_found">Location not found !</string>
    <string name="location_btn_description">Location</string>
    <string name="note_location">No location</string>

    <!-- Voice Recording -->
    <string name="is_recording">Recording…</string>
    <string name="stop_recording">Stopped the recording</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="record_button">Record</string>
    <string name="stop_record_button">Stop recording</string>
    <string name="audio_btn_description">Audio</string>

    <!-- Note editor -->
    <string name="bold">Bold</string>
    <string name="italics">Italics</string>
    <string name="underline">Underline</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="blockquote">Blockquote</string>
    <string name="unordered_list">Unordered list</string>
    <string name="insert_image">Insert image</string>
    <string name="ordered_list">Ordered list</string>
    <string name="add_drawing">Add drawing</string>
    <string name="add_tag_suggestion">\"Enter tag name\"</string>

    <!-- Notification Reminder -->
    <string name="title_date_reminder">The due date has come !</string>
    <string name="content_date_reminder">taskDescriptionDateReminder</string>
    <string name="channel_date_name">ReminderDateChannel</string>
    <string name="title_location_reminder">Location reminder !</string>
    <string name="toast_reminder">The reminder has been set !</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
    <string name="record">Record</string>
    <string name="button_that_starts_an_audio_recording">Button that starts an audio recording</string>
    <string name="play">Play</string>
    <string name="button_that_starts_playing_an_audio_recording">Button that starts playing an audio recording</string>
    <string name="save_location">Save location</string>
    <string name="save_note">Save note</string>
    <string name="note_header_image">Note header image</string>

    <string name="add_location">Add location</string>
    <string name="location_reminder">Location reminder</string>
    <string name="export_to_calendar">Export to calendar</string>
    <string name="date_reminder">Date reminder</string>
    <string name="remove_due_date">Remove due date</string>

    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
</resources>
